[gd_scene load_steps=2 format=3 uid="uid://dgh3unj0seieh"]

[ext_resource type="Script" uid="uid://b07qkdpbgkxqk" path="res://EquipmentSlot.gd" id="1_wlir7"]

[node name="EquipmentSlot" type="Control" node_paths=PackedStringArray("icon", "button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wlir7")
icon = NodePath("Panel/TextureRect")
button = NodePath("Panel/Button")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 80.0
offset_bottom = 80.0
mouse_filter = 1

[node name="Button" type="Button" parent="Panel"]
layout_mode = 0
offset_right = 79.0
offset_bottom = 80.0

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -30.0
offset_right = 30.0
offset_bottom = 60.0
grow_horizontal = 2
mouse_filter = 2

[connection signal="mouse_entered" from="Panel/Button" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Button" to="." method="_on_mouse_exited"]
